# chain-registry-blockchain-CREG-

./: .gitignore  .gitmodules  BLOCKCHAIN_PROJECT_REPORT.md  CHAIN_REGISTRY_GUIDE.md  DEEP_DIVE_ARCHITECTURE_REPORT.md  FINAL_DEPLOYMENT_SUMMARY.md  GIT_PUSH_SUMMARY.md  IMPLEMENTATION_PLAN.md  README.md  SECURITY_CHECKLIST_PRE_PUSH.md
chain-registry/: .dockerignore  .env.example  .gitignore  ADVANCED_FEATURES_IMPLEMENTATION_PLAN.md  AI_SCANNER_SETUP.md  ARCHITECTURE.md  CHANGELOG.md  COMPLETE_SYSTEM_DEEP_DIVE_ANALYSIS.md  COMPLETION_SUMMARY_2026-04-02.md  Cargo.toml  DAILY_PROGRESS_REPORT_2026-04-02.md  DAILY_WORK_SUMMARY_2026-04-02.md  DEEP_DIVE_ANALYSIS.md  DELIVERABLES_INDEX.md  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.minimal  Dockerfile.optimized  Dockerfile.secure  Dockerfile.windows  FINAL_SYSTEM_ANALYSIS_REPORT.md  IPFS_PINNING_COMPLETION.md  Makefile  PROGRESS_REPORT.md  README.md  SHIELDED_PACKAGES_COMPLETION.md  SYSTEM_ANALYSIS.md  SYSTEM_FULL_AUDIT_REPORT.md  TESTNET_DEPLOYMENT.md  TODO.md  TOKEN_ECONOMICS.md  UI_CLI_DEEP_DIVE.md  VALIDATOR_DEEP_DIVE.md  build-docker.ps1  build-docker.sh  cargo_check_output.txt  deploy.ps1  docker-compose.ingress.yml  docker-compose.local-testnet.yml  docker-compose.prebuilt.yml  (+15 more)
chain-registry/.github/workflows/: ci.yml  docker-build.yml  lighthouse.yml  nightly-build.yml  release-binaries.yml  sepolia-deploy.yml
chain-registry/circuits/: DoubleSignProof.circom
chain-registry/config/: relayer-policy.example.json  validator-set.json
chain-registry/config/consensus-evidence/: scanner-profile.schema.json
chain-registry/config/release-assurance/: toolchain-inventory.json
chain-registry/contracts/: Appeal.sol  BatchOperations.sol  CregToken.sol  CrossChainRegistry.sol  Governance.sol  GovernanceV2.sol  Groth16Verifier.sol  PackageInsurance.sol  PinningRewards.sol  PrivateRegistry.sol  Registry.sol  SlashingEvidence.sol  Staking.sol  VRF.sol  ZKSlashingVerifier.sol  ZKVerifier.sol
chain-registry/contracts/script/: Deploy.s.sol  DeploySepolia.s.sol
chain-registry/contracts/test/: Appeal.t.sol  CrossChainRegistry.t.sol  PrivateRegistry.t.sol  Registry.t.sol  SlashPriority.t.sol  StakingFuzz.t.sol  StakingPermit.t.sol
chain-registry/contracts/testnet/: TestCregToken.sol  TestStaking.sol
chain-registry/crates/cli/: Cargo.toml
chain-registry/crates/common/: Cargo.toml  build.rs
chain-registry/crates/consensus/: Cargo.toml
chain-registry/crates/cross-chain/: Cargo.toml
chain-registry/crates/db-sync/: Cargo.toml  README.md
chain-registry/crates/faucet/: Cargo.toml
chain-registry/crates/insurance/: Cargo.toml
chain-registry/crates/ipfs-pinner/: Cargo.toml
chain-registry/crates/ml-validator/: Cargo.toml
chain-registry/crates/node/: Cargo.toml
chain-registry/crates/relayer/: Cargo.toml
chain-registry/docs/: IPFS_PINNING_INCENTIVES.md  MAINNET_DEPLOYMENT_CHECKLIST.md  PERFORMANCE_OPTIMIZATION.md  SECURITY.md  SHIELDED_PACKAGES.md  ZK_SLASHING_EVIDENCE.md
chain-registry/explorer/: .dockerignore  Dockerfile  index.html  lighthouserc.json  nginx.conf  package-lock.json  package.json  playwright.config.js  vite.config.js
chain-registry/hub-api/: Dockerfile  package-lock.json  package.json
chain-registry/hub-web/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
chain-registry/k8s/: 00-namespace.yaml  01-configmap.yaml  10-postgres.yaml  11-ipfs.yaml  12-anvil.yaml  20-validator.yaml  21-validators-2-5.yaml  22-validators-6-10.yaml  30-api-gateway.yaml  40-ingress.yaml  50-monitoring.yaml  55-network-partition-test.yaml  60-backup.yaml  kustomization.yaml
chain-registry/observability/: README.md  alertmanager.yml  alerts.yml  docker-compose.observability.yml  grafana-dashboard.json  grafana-datasource.yml  latency-slo.json  loki-config.yml  otel-collector-config.yml  prometheus.sepolia-local.yml  prometheus.testnet.yml  prometheus.yml  promtail-config.yml  tempo.yml
chain-registry/playground/: block1.json  block2.json  debug_status.ps1  inspect_blocks.ps1  manifest.json  publish_all.ps1  publish_multi.ps1  stress_test_grpc.ps1  test.ps1  test_cleanup.ps1  test_cli.ps1
chain-registry/rules/: supply_chain.yar
chain-registry/scripts/: ddc-verify.sh  deploy-docker.ps1  deploy-docker.sh  deploy-sepolia.ps1  deploy-sepolia.sh  generate-sepolia-keys.sh  generate-testnet-keys.ps1  generate-testnet-keys.py  generate-tls-certs.sh  generate-validator-keys.ps1  generate-validator-keys.sh  install-creg.ps1  install-creg.sh  ipfs-cors-container.sh  ipfs-cors.ps1  ipfs-cors.sh  load_test.mjs  release-assurance.sh  smoke-test-local-testnet.ps1  smoke-test-testnet.ps1  start-local-testnet.ps1  start-testnet.ps1  stress-test-requirements.txt  stress-test.py  sync-local-testnet-artifacts.ps1  sync-testnet-artifacts.ps1  test-publish.ps1  test-revoke.ps1  tui-explorer.ps1  tui-explorer.sh  validate-consensus-evidence.mjs  verify-graduation-criteria.sh
chain-registry/secret-model/: package.json
chain-registry/stress-report-out/: stress-test-report.json
chain-registry/testnet/: .env.example  Deploy.s.sol  Dockerfile.deploy  OPERATOR.md  README.md  chain-spec.local.json  chain-spec.sepolia.json  chain-spec.sepolia.json.sig  consensus-finalization-smoke.ps1  deploy-contracts-docker.sh  deploy-manual.sh  deploy-sepolia-new-authority.ps1  deploy-sepolia.ps1  deploy-sepolia.sh  deploy-simple.ps1  deploy-testnet.ps1  deploy-testnet.sh  deploy-windows.ps1  deploy.bat  deploy.cmd  deploy.js  deploy_staking.sh  docker-compose.3node-ingress.yml  docker-compose.3node-services.yml  docker-compose.3node.yml  docker-compose.cloud-edge-ingress.yml  docker-compose.cloud-edge.yml  docker-compose.fleet-sandbox.yml  docker-compose.hub.yml  docker-compose.local-hybrid.yml  docker-compose.observer-pool.yml  docker-compose.testnet.yml  docker-compose.validator-fleet.yml  docker-compose.validator.yml  docker-compose.waitlist.yml  drip-sepolia-faucet.ps1  finalize-sepolia-spec.ps1  fund-sepolia-faucet-eth.ps1  gcp-public-hosting.md  genesis.json  (+27 more)
(+437 files in other folders)
