[workspace]
members = [
    "crates/common",
    "crates/cli",
    "crates/resolver",
    "crates/validator",
    "crates/consensus",
    "crates/node",
    "crates/zk-validator",
    "crates/ml-validator",
    "crates/wasm-sandbox",
    "crates/threshold-encryption",
    "crates/cross-chain",
    "crates/insurance",
    "crates/db-sync",
]
resolver = "2"

[workspace.dependencies]
tokio        = { version = "1", features = ["full"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
anyhow       = "1"
thiserror    = "1"
tracing      = "0.1"
sha2         = "0.10"
hex          = "0.4"
ed25519-dalek = "2"
rand         = "0.8"
sled         = "0.34"
reqwest      = { version = "0.11", features = ["json", "multipart"] }
clap         = { version = "4", features = ["derive"] }
chrono       = { version = "0.4", features = ["serde"] }
uuid         = { version = "1", features = ["v4", "serde"] }
urlencoding  = "2"
futures      = "0.3"

# gRPC / Protobuf dependencies
tonic        = { version = "0.12", features = ["transport", "prost"] }
prost        = "0.13"
prost-types  = "0.13"

# ZK dependencies
ark-bn254    = { version = "0.4", features = ["curve"] }
ark-groth16   = "0.4"
ark-snark     = "0.4"
ark-ff        = "0.4"
ark-ec        = "0.4"
ark-serialize = "0.4"
ark-relations = "0.4"
ark-r1cs-std  = "0.4"

# ML dependencies
ort           = "2.0.0-rc.12"
tract-onnx    = "0.21"
tokenizers    = "0.15"

# WASM dependencies
wasmtime      = { version = "18", features = ["async", "cranelift"] }
wasmtime-wasi = "18"
