[package]
name    = "chain-registry-node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "creg-node"
path = "src/main.rs"

[dependencies]
common    = { path = "../common" }
validator = { path = "../validator" }
ml-validator = { path = "../ml-validator" }
consensus = { path = "../consensus" }
resolver  = { path = "../resolver" }
zk-validator = { path = "../zk-validator" }
db-sync   = { path = "../db-sync" }
threshold-encryption = { path = "../threshold-encryption" }

tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono       = { workspace = true }
uuid         = { workspace = true }
sha2         = { workspace = true }
hex          = { workspace = true }
reqwest      = { workspace = true }
sled         = { workspace = true }
rocksdb      = { workspace = true }
ed25519-dalek = { workspace = true }
rand         = { workspace = true }

axum         = { version = "0.7", features = ["json", "ws"] }
axum-server  = { version = "0.7", features = ["tls-rustls"], optional = true }
tower        = { version = "0.4" }
tower-http   = { version = "0.5", features = ["cors", "trace", "limit"] }
tokio-stream = { version = "0.1", features = ["sync"] }
flate2       = "1"
tar          = "0.4"
libc         = "0.2"
urlencoding  = { workspace = true }
thiserror    = { workspace = true }
futures      = { workspace = true }
aes-gcm      = "0.10"
libp2p       = { version = "0.53", features = ["tcp", "dns", "websocket", "noise", "yamux", "kad", "gossipsub", "identify", "macros", "tokio"] }
alloy        = { version = "0.1", features = ["full"] }
tonic        = { workspace = true, features = ["transport"] }
prost        = { workspace = true }
rust-embed   = "8.0"
mime_guess   = "2.0"
semver       = "1"

[features]
default = []
tls = ["axum-server"]
